--- a/src/mk/hooks/useCrud/useCrudStyle.module.css
+++ b/src/mk/hooks/useCrud/useCrudStyle.module.css
@@ -36,7 +36,7 @@
     align-items: center;
     gap: var(--spL);
     overflow: visible;
-    margin-bottom: var(--spM);
+    margin-bottom: var(--spL);
     & > div > div > div {
       margin-bottom: 0px;
     }
