--- a/src/modulos/Defaulters/Defaulters.module.css
+++ b/src/modulos/Defaulters/Defaulters.module.css
@@ -18,7 +18,7 @@
 .listContainer {
   display: flex;
   flex-direction: column;
-  gap: var(--spL);
+  margin-top: var(--spL);
   flex-wrap: wrap;
 }
 
